tests/vertical-slice/reject/match_usize_literal_nonexhaustive.hew
// REJECT: literal-only usize matches must include a catch-all arm.
fn _f(x: usize) -> i64 {
    match x {
        0 => 0,
        1 => 1,
    }
    0
}
